--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A HTTP API that can accept a Roman numeral string and return the value as an integer.",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "test": "mocha ./spec/*.spec.js"
   },
   "repository": {
     "type": "git",
